--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -2,4 +2,7 @@
 {% extends "base.html" %} {% block content %}
 <h1>Rock For The World</h1>
 <p>"Everything you touch and everything you see is all your life will ever be" (Pink Floyd).</p>
+{% include 'base_categories.html' %}
+{% include 'base_sidebar.html' %}
+{% include 'base_footer.html' %}
 {% endblock %}
