--- a/templates/base_nav.html
+++ b/templates/base_nav.html
@@ -22,10 +22,7 @@
           <a class="nav-link" href="/pages">Pages</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/Logout">Logout</a>
+          <a class="nav-link" href="/login">Login</a>    
         </li>
       </ul>
     </div>
