--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button class="btn btn-primary" type="submit">Iniciar Sesión</button>
-        <a class="btn btn-info" href="/about">Registrar</a>    
+        <a class="btn btn-info" href="/registro">Registrar</a>    
     </form> 
     {% endblock %}
 {% comment %} <!DOCTYPE html>
